add specification , exception handler